# diylabel-shopify-extension-public

./: CHECKOUT_EXTENSIONS_GUIDE.md  README.md  SHOPIFY_CHECKOUT_INTEGRATION.md  SHOPIFY_SETUP.md  SHOP_DOMAIN_HARDCODED.md  STRIPE_INTEGRATION_GUIDE.md  index.html  package-lock.json  package.json  shopify-init.md
.bolt/supabase_discarded_migrations/: 20250621101901_winter_morning.sql  20250621105453_calm_forest copy.sql  20250621212323_green_waterfall.sql  20250622115932_floating_night copy.sql  20250622120110_lively_resonance copy.sql
app/routes/: api.orders.diy-label.tsx  test-cart-attributes.tsx  test-order-creation.tsx  widget.tsx
diy-label/: CHECKOUT_INTEGRATION.md  README.md  SHOPIFY_CHECKOUT_LOCATION_PLAN.md  THEME_INTEGRATION.md  TROUBLESHOOTING.md  package-lock.json  package.json  shopify.app.toml  test.txt
diy-label/app/lib/: supabase.client.ts  supabase.server.ts
diy-label/app/routes/: api.cart-update.tsx  api.checkout.diy-label.tsx  api.geocode.tsx  api.orders.diy-label.tsx  api.print-shops.nearby.tsx  (+31 more)
diy-label/extensions/diy-label-local-pickup/: Cargo.toml  package.json  shopify.extension.toml
diy-label/extensions/diy-label-local-pickup/locales/: en.default.json
diy-label/extensions/diy-label-local-pickup/src/: run.graphql  run.rs  run.test.ts  run.ts
extensions.bak/diy-label/: shopify.extension.toml
extensions.checkout.bak/diy-label/: shopify.extension.toml
extensions.checkout.bak/diy-label-local-pickup/: shopify.extension.toml
netlify-functions/: .env.example  README.md  netlify.toml  package.json
netlify-functions/public/: index.html
(+66 files in other folders)
