[package]
name = "diy-label-local-pickup"
version = "1.0.0"
edition = "2021"

[dependencies]
shopify_function = "1.1.0"
serde = { version = "1.0", features = ["derive"] }

[profile.release]
lto = true
opt-level = 'z'
strip = true

[[bin]]
name = "diy-label-local-pickup"
path = "src/main.rs"

[lib]
crate-type = ["cdylib"]